assignment1/demo/ZCodeParser.java
// Generated from ZCode.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ZCodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUMLIT=1, BOOLLIT=2, STRINGLIT=3, TRUE=4, FALSE=5, NUMBER=6, BOOL=7, STRING=8, 
		RETURN=9, VAR=10, DYNAMIC=11, FUNC=12, FOR=13, UNTIL=14, BY=15, BREAK=16, 
		CONTINUE=17, IF=18, ELSE=19, ELIF=20, BEGIN=21, END=22, NOT=23, AND=24, 
		OR=25, ADDOP=26, SUBOP=27, MULOP=28, DIVOP=29, MODOP=30, ASSIGNOP=31, 
		EQUALOP=32, DIFFOP=33, SMALLEROP=34, GREATEROP=35, SEQOP=36, GEQOP=37, 
		ELLIPOP=38, DOUBLEEQOP=39, COMMA=40, LRB=41, RRB=42, LSQB=43, RSQB=44, 
		IDENTIFIER=45, LINEBREAK=46, COMMENT=47, WS=48;
	public static final int
		RULE_program = 0, RULE_decllist = 1, RULE_decllisttail = 2, RULE_decl = 3, 
		RULE_func_decl = 4, RULE_param_decl = 5, RULE_paramlist = 6, RULE_paramlisttail = 7, 
		RULE_param = 8, RULE_func_decl_end = 9, RULE_func_statement = 10, RULE_var_decl = 11, 
		RULE_typ = 12, RULE_initialization = 13, RULE_array_decl = 14, RULE_dimensionlist = 15, 
		RULE_numlitlist = 16, RULE_numlitlisttail = 17, RULE_array_init = 18, 
		RULE_arraylit = 19, RULE_array_decl_elelist = 20, RULE_array_decl_elelisttail = 21, 
		RULE_array_decl_ele = 22, RULE_literals = 23, RULE_statement = 24, RULE_var_decl_statement = 25, 
		RULE_assign_statement = 26, RULE_lhs = 27, RULE_array_ele = 28, RULE_if_statement = 29, 
		RULE_ifpart = 30, RULE_exprclause = 31, RULE_eliflist = 32, RULE_eliflisttail = 33, 
		RULE_elifpart = 34, RULE_elsepart = 35, RULE_for_statement = 36, RULE_break_statement = 37, 
		RULE_continue_statement = 38, RULE_return_statement = 39, RULE_function_call_statement = 40, 
		RULE_block_statement = 41, RULE_statementlist = 42, RULE_statementlisttail = 43, 
		RULE_expr = 44, RULE_lv8_expr = 45, RULE_lv7_expr = 46, RULE_lv6_expr = 47, 
		RULE_lv5_expr = 48, RULE_lv4_expr = 49, RULE_lv3_expr = 50, RULE_lv2_expr = 51, 
		RULE_lv1_expr = 52, RULE_array_indexing = 53, RULE_array_expression = 54, 
		RULE_index_operator = 55, RULE_exprlist = 56, RULE_exprlisttail = 57, 
		RULE_function_call = 58, RULE_args = 59, RULE_argslist = 60, RULE_argslisttail = 61, 
		RULE_linebreaklist = 62, RULE_nullablelinebreaklist = 63, RULE_linebreaklisttail = 64;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "decllist", "decllisttail", "decl", "func_decl", "param_decl", 
			"paramlist", "paramlisttail", "param", "func_decl_end", "func_statement", 
			"var_decl", "typ", "initialization", "array_decl", "dimensionlist", "numlitlist", 
			"numlitlisttail", "array_init", "arraylit", "array_decl_elelist", "array_decl_elelisttail", 
			"array_decl_ele", "literals", "statement", "var_decl_statement", "assign_statement", 
			"lhs", "array_ele", "if_statement", "ifpart", "exprclause", "eliflist", 
			"eliflisttail", "elifpart", "elsepart", "for_statement", "break_statement", 
			"continue_statement", "return_statement", "function_call_statement", 
			"block_statement", "statementlist", "statementlisttail", "expr", "lv8_expr", 
			"lv7_expr", "lv6_expr", "lv5_expr", "lv4_expr", "lv3_expr", "lv2_expr", 
			"lv1_expr", "array_indexing", "array_expression", "index_operator", "exprlist", 
			"exprlisttail", "function_call", "args", "argslist", "argslisttail", 
			"linebreaklist", "nullablelinebreaklist", "linebreaklisttail"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'true'", "'false'", "'number'", "'bool'", "'string'", 
			"'return'", "'var'", "'dynamic'", "'func'", "'for'", "'until'", "'by'", 
			"'break'", "'continue'", "'if'", "'else'", "'elif'", "'begin'", "'end'", 
			"'not'", "'and'", "'or'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<-'", 
			"'='", "'!='", "'<'", "'>'", "'<='", "'>='", "'...'", "'=='", "','", 
			"'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NUMLIT", "BOOLLIT", "STRINGLIT", "TRUE", "FALSE", "NUMBER", "BOOL", 
			"STRING", "RETURN", "VAR", "DYNAMIC", "FUNC", "FOR", "UNTIL", "BY", "BREAK", 
			"CONTINUE", "IF", "ELSE", "ELIF", "BEGIN", "END", "NOT", "AND", "OR", 
			"ADDOP", "SUBOP", "MULOP", "DIVOP", "MODOP", "ASSIGNOP", "EQUALOP", "DIFFOP", 
			"SMALLEROP", "GREATEROP", "SEQOP", "GEQOP", "ELLIPOP", "DOUBLEEQOP", 
			"COMMA", "LRB", "RRB", "LSQB", "RSQB", "IDENTIFIER", "LINEBREAK", "COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ZCode.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ZCodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public NullablelinebreaklistContext nullablelinebreaklist() {
			return getRuleContext(NullablelinebreaklistContext.class,0);
		}
		public DecllistContext decllist() {
			return getRuleContext(DecllistContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ZCodeParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			nullablelinebreaklist();
			setState(131);
			decllist();
			setState(132);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecllistContext extends ParserRuleContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public DecllisttailContext decllisttail() {
			return getRuleContext(DecllisttailContext.class,0);
		}
		public DecllistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decllist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).enterDecllist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).exitDecllist(this);
		}
	}

	public final DecllistContext decllist() throws RecognitionException {
		DecllistContext _localctx = new DecllistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decllist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			decl();
			setState(135);
			decllisttail();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecllisttailContext extends ParserRuleContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public DecllisttailContext decllisttail() {
			return getRuleContext(DecllisttailContext.class,0);
		}
		public DecllisttailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decllisttail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).enterDecllisttail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).exitDecllisttail(this);
		}
	}

	public final DecllisttailContext decllisttail() throws RecognitionException {
		DecllisttailContext _localctx = new DecllisttailContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decllisttail);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
			case BOOL:
			case STRING:
			case VAR:
			case DYNAMIC:
			case FUNC:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				decl();
				setState(138);
				decllisttail();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public LinebreaklistContext linebreaklist() {
			return getRuleContext(LinebreaklistContext.class,0);
		}
		public Func_declContext func_decl() {
			return getRuleContext(Func_declContext.class,0);
		}
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).exitDecl(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNC:
				{
				setState(143);
				func_decl();
				}
				break;
			case NUMBER:
			case BOOL:
			case STRING:
			case VAR:
			case DYNAMIC:
				{
				setState(144);
				var_decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(147);
			linebreaklist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_declContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(ZCodeParser.FUNC, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ZCodeParser.IDENTIFIER, 0); }
		public Param_declContext param_decl() {
			return getRuleContext(Param_declContext.class,0);
		}
		public Func_decl_endContext func_decl_end() {
			return getRuleContext(Func_decl_endContext.class,0);
		}
		public Func_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).enterFunc_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).exitFunc_decl(this);
		}
	}

	public final Func_declContext func_decl() throws RecognitionException {
		Func_declContext _localctx = new Func_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(FUNC);
			setState(150);
			match(IDENTIFIER);
			setState(151);
			param_decl();
			setState(152);
			func_decl_end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_declContext extends ParserRuleContext {
		public TerminalNode LRB() { return getToken(ZCodeParser.LRB, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public TerminalNode RRB() { return getToken(ZCodeParser.RRB, 0); }
		public Param_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).enterParam_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).exitParam_decl(this);
		}
	}

	public final Param_declContext param_decl() throws RecognitionException {
		Param_declContext _localctx = new Param_declContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_param_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(LRB);
			setState(155);
			paramlist();
			setState(156);
			match(RRB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistContext extends ParserRuleContext {
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public ParamlisttailContext paramlisttail() {
			return getRuleContext(ParamlisttailContext.class,0);
		}
		public ParamlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).enterParamlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).exitParamlist(this);
		}
	}

	public final ParamlistContext paramlist() throws RecognitionException {
		ParamlistContext _localctx = new ParamlistContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_paramlist);
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
			case BOOL:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				param();
				setState(159);
				paramlisttail();
				}
				break;
			case RRB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlisttailContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(ZCodeParser.COMMA, 0); }
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public ParamlisttailContext paramlisttail() {
			return getRuleContext(ParamlisttailContext.class,0);
		}
		public ParamlisttailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlisttail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).enterParamlisttail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).exitParamlisttail(this);
		}
	}

	public final ParamlisttailContext paramlisttail() throws RecognitionException {
		ParamlisttailContext _localctx = new ParamlisttailContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_paramlisttail);
		try {
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(164);
				match(COMMA);
				setState(165);
				param();
				setState(166);
				paramlisttail();
				}
				break;
			case RRB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TypContext typ() {
			return getRuleContext(TypContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(ZCodeParser.IDENTIFIER, 0); }
		public DimensionlistContext dimensionlist() {
			return getRuleContext(DimensionlistContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).exitParam(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			typ();
			setState(172);
			match(IDENTIFIER);
			setState(175);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LSQB:
				{
				setState(173);
				dimensionlist();
				}
				break;
			case COMMA:
			case RRB:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_decl_endContext extends ParserRuleContext {
		public LinebreaklistContext linebreaklist() {
			return getRuleContext(LinebreaklistContext.class,0);
		}
		public NullablelinebreaklistContext nullablelinebreaklist() {
			return getRuleContext(NullablelinebreaklistContext.class,0);
		}
		public Func_statementContext func_statement() {
			return getRuleContext(Func_statementContext.class,0);
		}
		public Func_decl_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_decl_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).enterFunc_decl_end(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).exitFunc_decl_end(this);
		}
	}

	public final Func_decl_endContext func_decl_end() throws RecognitionException {
		Func_decl_endContext _localctx = new Func_decl_endContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_func_decl_end);
		try {
			setState(181);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(177);
				linebreaklist();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(178);
				nullablelinebreaklist();
				setState(179);
				func_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_statementContext extends ParserRuleContext {
		public Return_statementContext return_statement() {
			return getRuleContext(Return_statementContext.class,0);
		}
		public Block_statementContext block_statement() {
			return getRuleContext(Block_statementContext.class,0);
		}
		public Func_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).enterFunc_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).exitFunc_statement(this);
		}
	}

	public final Func_statementContext func_statement() throws RecognitionException {
		Func_statementContext _localctx = new Func_statementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_func_statement);
		try {
			setState(185);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RETURN:
				enterOuterAlt(_localctx, 1);
				{
				setState(183);
				return_statement();
				}
				break;
			case BEGIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(184);
				block_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ZCodeParser.IDENTIFIER, 0); }
		public TypContext typ() {
			return getRuleContext(TypContext.class,0);
		}
		public TerminalNode DYNAMIC() { return getToken(ZCodeParser.DYNAMIC, 0); }
		public InitializationContext initialization() {
			return getRuleContext(InitializationContext.class,0);
		}
		public TerminalNode VAR() { return getToken(ZCodeParser.VAR, 0); }
		public Array_declContext array_decl() {
			return getRuleContext(Array_declContext.class,0);
		}
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZCodeListener ) ((ZCodeListener)listener).exitVar_decl(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_var_decl);
		try {
			setState(200);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(189);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NUMBER:
				case BOOL:
				case STRING:
					{
					setState(187);
					typ();
					}
					break;
				case DYNAMIC:
					{
					setState(188);
					match(DYNAMIC);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(191);
				match(IDENTIFIER);
				setState(194);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ASSIGNOP:
					{
					setState(192);
					initialization();
					}
					break;
				case LINEBREAK:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(196);
				match(VAR);
				setState(197);
				match(IDENTIFIER);
				setState(198);
				initialization();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(199);
				array_decl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
